--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,13 @@ header .logoLink img {
     width: 200px;
 }
 
+header .logoLink img:hover {
+    transform: rotate(360deg);
+    transition: transform 2.5s;
+}
+
+
+
 header .logoText {
     font-size: 3rem;
     color: rgba(38, 89, 1, 0.75);
@@ -102,7 +109,7 @@ nav {
 .navList .listItem {
     padding: 2rem;
     margin: 2rem 0.5rem;
-    border-radius: 3rem;
+    border-radius: 1rem;
     background-color: rgba(38, 89, 1, 0.5);
 }
 
@@ -116,6 +123,8 @@ nav {
 .navList .listItem:hover {
     background-color: rgb(0, 82, 153);
     cursor: pointer;
+    transform: scale(105%);
+    transition: transform 0.7s;
 }
 
 .navList .link:hover {
@@ -471,6 +480,11 @@ footer {
     width: 8rem;
 }
 
+.shareContainer .link img:hover {
+    transform: rotate(360deg);
+    transition: transform 1.5s;
+}
+
 .shareContainer .link p {
     text-align: center;
 }
@@ -666,4 +680,3 @@ footer {
         height: 70%;
     }
 }
-
