--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
   font-size: 62.5%; }
 
+.myButton, nav #navContainer #navbarNavAltMarkup #navbar a .myButton--rounded, body main form fieldset #formButtons .myButton--rounded {
+  background-color: rgba(38, 89, 1, 0.5);
+  margin: 1rem;
+  padding: 1rem; }
+
 @keyframes twist {
   0% {
     transform: rotate(45deg); }
@@ -28,48 +33,70 @@ header div a img {
 
 header div a h1 {
   font-size: 4rem;
-  color: rgba(38, 89, 1, 0.75); }
+  color: rgba(38, 89, 1, 0.75);
+  font-weight: bold; }
 
 nav {
   background-color: rgba(38, 89, 1, 0.25); }
-  nav div div div div {
-    padding: 1rem;
-    margin: 1rem;
-    border-radius: 1rem;
-    background-color: rgba(38, 89, 1, 0.5); }
-    nav div div div div:hover {
-      background-color: #005299;
-      cursor: pointer;
-      transform: scale(105%);
-      transition: transform 0.7s; }
-    nav div div div div a {
-      font-size: 2rem;
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      text-align: center; }
-      nav div div div div a:hover {
-        color: white; }
+  nav #navContainer #navbarNavAltMarkup #navbar a {
+    text-decoration: none; }
+    nav #navContainer #navbarNavAltMarkup #navbar a .myButton--rounded {
+      border-radius: 1rem; }
+      nav #navContainer #navbarNavAltMarkup #navbar a .myButton--rounded:hover {
+        background-color: #005299;
+        cursor: pointer;
+        transform: scale(105%);
+        transition: transform 0.7s; }
+      nav #navContainer #navbarNavAltMarkup #navbar a .myButton--rounded p {
+        font-size: 2rem;
+        color: white;
+        font-weight: bold;
+        text-decoration: none;
+        text-align: center; }
+        nav #navContainer #navbarNavAltMarkup #navbar a .myButton--rounded p:hover {
+          color: white; }
 
 body {
   background: radial-gradient(rgba(0, 82, 153, 0.5), white); }
-  body main #carousel div div div div {
+  body main #carousel #carouselWithCaptions #carousel-inner .carousel-item .carousel-caption {
     background-color: rgba(38, 89, 1, 0.25);
     border-radius: 1rem; }
-  body main #stats div div div {
+  body main #stats .row article .card {
     background-color: rgba(38, 89, 1, 0.25);
-    padding: 1rem;
-    border-radius: 1rem;
-    font-size: 2rem;
-    color: #262626;
-    text-align: center;
-    height: 80px; }
-  body main #who-what-how div article div {
-    background-color: rgba(38, 89, 1, 0.25); }
-    body main #who-what-how div article div div {
+    border-radius: 1rem; }
+  body main #stats .row article .card:hover {
+    box-shadow: 0 0 15px rgba(33, 33, 33, 0.2); }
+  body main #who-what-how .row article .card {
+    background-color: rgba(38, 89, 1, 0.1); }
+    body main #who-what-how .row article .card .card-body {
       border-left: rgba(38, 89, 1, 0.5) solid 10px; }
+  body main #who-what-how .row article .card:hover {
+    box-shadow: 0 0 15px rgba(33, 33, 33, 0.2); }
+  body main .title {
+    background-color: rgba(38, 89, 1, 0.5);
+    color: white;
+    padding: 2rem; }
+  body main .myContainer {
+    background-color: rgba(38, 89, 1, 0.25); }
+  body main form fieldset #formButtons .myButton--rounded {
+    border-radius: 1rem;
+    color: white; }
+
+footer #separator {
+  background-color: rgba(38, 89, 1, 0.5);
+  color: white;
+  padding: 1rem 0 1rem 0; }
 
 footer #social-networks div a img {
   animation-name: twist;
   animation-duration: 8s;
   animation-iteration-count: infinite; }
+
+footer #credits article a {
+  color: black;
+  text-decoration: none; }
+
+@media only screen and (max-width: 768px) {
+  #iframe1,
+  #iframe2 {
+    height: 400px; } }
