--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -64,3 +64,27 @@ $colors:(
         transform: scale(0.9);
     }
 }
+
+@keyframes drone-404 {
+    0%{
+        transform: translate(0px,50px);
+    }
+    10%{
+        transform: translate(100px,-10px);
+    }
+    20%{
+        transform: translate(100px,50px);
+    }
+    40%{
+        transform: translate(100px);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    60%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: translateY(40px);
+    }
+}
