--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -143,3 +143,35 @@ footer {
     height: 400px;
 }
 }
+
+//404
+#error-body{
+    .row{
+        .col{
+            img{
+                animation: drone-404 15s infinite ease-in-out;
+            }
+        }
+    }
+    .myButton--rounded{
+        @extend .myButton;
+        border-radius: 1rem;
+        color:white;
+        &:hover {
+            background-color: rgb(0, 82, 153);
+            cursor: pointer;
+            transform: scale(105%);
+            transition: transform 0.7s;
+        }
+    }
+    
+    #cred-drone-logo{
+        position: fixed;
+        bottom:0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+    }
+}
