--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -8,7 +8,7 @@ header {
             }
             h1 {
                 font-size: 4rem;
-                color: map-get($map:$colors,$key:'logoText');
+                color: map-get($map: $colors, $key: 'logoText');
                 font-weight: bold;
             }
         }
@@ -16,11 +16,11 @@ header {
 }
 
 nav {
-    background-color: map-get($map:$colors,$key:'containerColor-25');
+    background-color: map-get($map: $colors, $key: 'containerColor-25');
     #navContainer {
         #navbarNavAltMarkup {
             #navbar {
-                a{
+                a {
                     text-decoration: none;
                     .myButton--rounded {
                         @extend .myButton;
@@ -32,7 +32,7 @@ nav {
                             transition: transform 0.7s;
                         }
                         p {
-                            @include text(2rem,white,bold,none,center);
+                            @include text(2rem, white, bold, none, center);
                             &:hover {
                                 color: white;
                             }
@@ -45,14 +45,14 @@ nav {
 }
 
 body {
-    background: map-get($map:$colors,$key:'backgroundGradient');
+    background: map-get($map: $colors, $key: 'backgroundGradient');
     main {
         #carousel {
             #carouselWithCaptions {
                 #carousel-inner {
                     .carousel-item {
                         .carousel-caption {
-                            background-color: map-get($map:$colors,$key:'containerColor-25');
+                            background-color: map-get($map: $colors, $key: 'containerColor-25');
                             border-radius: 1rem;
                         }
                     }
@@ -60,48 +60,48 @@ body {
             }
         }
         #stats {
-            .row{
+            .row {
                 article {
-                    .card{
-                        background-color: map-get($map:$colors,$key:'containerColor-25');
+                    .card {
+                        background-color: map-get($map: $colors, $key: 'containerColor-25');
                         border-radius: 1rem;
                     }
-                    .card:hover{
-                        box-shadow: 0 0 15px rgba(33,33,33,.2); 
+                    .card:hover {
+                        box-shadow: 0 0 15px rgba(33, 33, 33, .2);
                     }
                 }
-            } 
+            }
         }
         #who-what-how {
             .row {
                 article {
                     .card {
-                        background-color: map-get($map:$colors,$key:'containerColor-10');
+                        background-color: map-get($map: $colors, $key: 'containerColor-10');
                         .card-body {
                             border-left: rgba(38, 89, 1, 0.5) solid 10px;
                         }
                     }
-                    .card:hover{
-                        box-shadow: 0 0 15px rgba(33,33,33,.2); 
+                    .card:hover {
+                        box-shadow: 0 0 15px rgba(33, 33, 33, .2);
                     }
                 }
             }
         }
         .title {
-            background-color: map-get($map:$colors,$key:'titleBackground');
+            background-color: map-get($map: $colors, $key: 'titleBackground');
             color: white;
             padding: 2rem;
         }
         .myContainer {
-            background-color: map-get($map:$colors,$key:'containerColor-25');
+            background-color: map-get($map: $colors, $key: 'containerColor-25');
         }
-        form{
-            fieldset{
-                #formButtons{
-                    .myButton--rounded{
+        form {
+            fieldset {
+                #formButtons {
+                    .myButton--rounded {
                         @extend .myButton;
                         border-radius: 1rem;
-                        color:white;
+                        color: white;
                     }
                 }
             }
@@ -138,25 +138,26 @@ footer {
 
 //Media queries
 @media only screen and (max-width: 768px) {
-#iframe1,
-#iframe2 {
-    height: 400px;
-}
+    #iframe1,
+    #iframe2 {
+        height: 400px;
+    }
 }
 
 //404
-#error-body{
-    .row{
-        .col{
-            img{
-                animation: drone-404 15s infinite ease-in-out;
+#error-body {
+    height: 100vh;
+    .row {
+        .col {
+            img {
+                animation: drone-404 10s infinite ease-in-out;
             }
         }
     }
-    .myButton--rounded{
+    .myButton--rounded {
         @extend .myButton;
         border-radius: 1rem;
-        color:white;
+        color: white;
         &:hover {
             background-color: rgb(0, 82, 153);
             cursor: pointer;
@@ -164,10 +165,9 @@ footer {
             transition: transform 0.7s;
         }
     }
-    
-    #cred-drone-logo{
+    #cred-drone-logo {
         position: fixed;
-        bottom:0;
+        bottom: 0;
         left: 50%;
         transform: translate(-50%, -50%);
         text-decoration: none;
