--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -11,33 +11,38 @@
 $primaryFont: 'Rubik',
 sans-serif;
 //Colors
-$colors:(
-    'backgroundGradient': radial-gradient(rgba(0, 82, 153, 0.5), rgb(255, 255, 255)),
-    'logoText': rgba(38,89,1,0.75),
-    'containerColor-10': rgba(38,89,1,0.10),
-    'containerColor-25': rgba(38,89,1,0.25),
-    'containerColor-50': rgba(38,89,1,0.5),
-    'buttonHover':rgb(0,82,153),
-    'titleBackground': rgba(38, 89, 1, 0.5),
+$colors:( 'backgroundGradient': radial-gradient(rgba(0, 82, 153, 0.5), rgb(255, 255, 255)),
+'logoText': rgba(38, 89, 1, 0.75),
+'containerColor-10': rgba(38, 89, 1, 0.10),
+'containerColor-25': rgba(38, 89, 1, 0.25),
+'containerColor-50': rgba(38, 89, 1, 0.5),
+'buttonHover':rgb(0, 82, 153),
+'titleBackground': rgba(38, 89, 1, 0.5),
 );
-
 //Mixins
-@mixin button($bgcolor,$margin,$padding){
+@mixin button($bgcolor,
+$margin,
+$padding) {
     background-color: $bgcolor;
     margin: $margin;
     padding: $padding;
 }
-@mixin text($font-size,$color,$font-weight, $text-decoration,$text-align){
+
+@mixin text($font-size,
+$color,
+$font-weight,
+$text-decoration,
+$text-align) {
     font-size: $font-size;
-    color:$color;
+    color: $color;
     font-weight: $font-weight;
     text-decoration: $text-decoration;
     text-align: $text-align;
 }
 
 //Buttons
-.myButton{
-    @include button(map-get($map:$colors,$key:'containerColor-50'),1rem,1rem);
+.myButton {
+    @include button(map-get($map: $colors, $key: 'containerColor-50'), 1rem, 1rem);
 }
 
 //Animations
@@ -66,25 +71,25 @@ $colors:(
 }
 
 @keyframes drone-404 {
-    0%{
-        transform: translate(0px,50px);
+    0% {
+        transform: translate(0px, 50px);
     }
-    10%{
-        transform: translate(100px,-10px);
+    10% {
+        transform: translate(100px, -10px);
     }
-    20%{
-        transform: translate(100px,50px);
+    20% {
+        transform: translate(100px, 50px);
     }
-    40%{
+    40% {
         transform: translate(100px);
     }
-    50%{
+    50% {
         transform: rotate(180deg);
     }
-    60%{
+    60% {
         transform: rotate(0deg);
     }
-    100%{
+    100% {
         transform: translateY(40px);
     }
 }
